--- a/style.css
+++ b/style.css
@@ -5,41 +5,44 @@
     box-sizing: border-box;
 }
 
+/* NAV */
 
-.nav_bottom {
 
-    width: 75%;
+
+.great_container {
+
+    width: 100%;
+}
+
+.container {
+
+    max-width: 80%;
     margin: auto;
-    color: rgb(126, 139, 151);
+    
+}
+
+.row {
+
+
+    width: 100%;
 
 }
 
-.nav_bottom::after {
-
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.logo {
-
+[class*="col-"] {
     float: left;
-    line-height: 96.85px;
-    width: 10%;
+    /* text-align: center; */
+    /* padding: 45px 0; */
 }
 
-.nav_bottom .logo img {
+
+
+.col-2 .logo img {
 
     width: 120px;
     vertical-align: middle;
-
-}
-.nav_bottom ul {
-
-    display: inline-block;
 }
 
-.nav_bottom ul li {
+.central_ul li ,.right_ul li{
 
     list-style-type: none;
     display: inline;
@@ -47,43 +50,132 @@
 
 }
 
-.nav_bottom ul li a {
+.col-5 .central_ul li a , .col-5 .right_ul li a {
 
-    color: rgb(126, 139, 151);
     text-decoration: none;
+    color: black;
 
 }
 
-.nav_bottom_list {
-
-    float: right;
-    line-height: 96.8594px
-}
-
-.nav_bottom_list li {
-
-    font-family: "AvenirNext","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 400;
-    color: rgb(126, 139, 151);
-
-}
-
-.nav_bottom_list_span, .language_span span{
-
-    padding: 5px 0px 5px 5px;
-    font-size: 20px;
-    color: rgb(126, 139, 151);
-    
-}
-
-.central_ul {
-
-    padding-right: 80px;
-}
-
-.right_ul_btn a {
+.col-5 .right_ul_btn a{
 
     padding:10px 10px;
     border: 1px solid blue;
     border-radius: 10px;
+    color: black;
+
+}
+
+.text-right {
+
+    text-align: right;
+}
+
+.hero_h1 {
+
+    font-size: 40px;
+    color: white;
+}
+
+
+
+/* hero */
+
+
+
+.hero {
+
+    width: 100%;
+    background-image: url(img/bg-banner-home.jpg);
+    padding: 80px 0;
+}
+
+.hero_h1 {
+
+    font-size: 35px;
+    color: white;
+    text-align: left;
+}
+
+.hero_p {
+
+    font-size: 18px;
+    color: white;
+    text-align: left;
+    padding: 10px 0;
+
+}
+
+.panel_sign_in {
+
+    width: 100%;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.form_lgr {
+
+    width: 90%;
+    margin: auto;
+    padding: 5px 0;
+    border-radius: 5px;
+    border: 1px solid lightslategrey;
+    margin: 5px 0;
+}
+
+form li {
+
+    list-style-type: none;
+    margin: 5px 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ----MOBILE NAV ------ */
+
+@media all and (max-width:767px) {
+
+    
+    .hidden {
+
+        display: none;
+    
+    }
+
+    .visible  {
+
+        display: block;
+        color: blue;
+        padding-right: 20px;
+    
+    }
+
+    .logo {
+
+        padding-left: 20px;
+    }
+}
+
+/* ------ TABLET VERSION -------- */
+
+@media all and (min-width:768px) {
+
+    
+    .visible  {
+
+        display: none;
+    
+    }
 }
