--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ form button a {
 
 
 
-/* ----MOBILE NAV ------ */
+/* ----MOBILE VERSION------ */
 
 @media all and (max-width:767px) {
 
@@ -193,9 +193,17 @@ form button a {
 @media all and (min-width:768px) and (max-width:991px){
 
     
-    .visible  {
+    .hidden {
 
         display: none;
+    
+    }
+
+    .visible  {
+
+        display: block;
+        color: blue;
+        padding-right: 20px;
     
     }
 
@@ -205,4 +213,18 @@ form button a {
         padding-bottom: 10px;
         
     }
+}
+
+/* -----desktop version----- */
+
+@media all and (min-width:992px) {
+
+    .visible  {
+
+        display: none;
+    
+    }
+
+
+
 }
