aggiungo sezione deploy

--- a/framework.css
+++ b/framework.css
@@ -106,3 +106,16 @@
 .centred {
     text-align: center;
 }
+
+.vertical {
+
+    vertical-align: middle;
+}
+
+/* .margin-left {
+
+    margin-left: 25px;
+} */
+
+
+
