--- a/style.css
+++ b/style.css
@@ -253,12 +253,12 @@ form button a {
 
     display: inline;
     
-    padding: 200px 0;
+    padding: 190px 0;
 }
 
 .chevron {
 
-    width: 10%;
+    width: 5%;
     float: left;
 }
 
@@ -266,13 +266,12 @@ form button a {
 
     vertical-align: middle;
     font-size: 40px;
-    
 
 }
 
 .slider {
 
-    width: 80%;
+    width: 90%;
     float: left;
 }
 
@@ -283,6 +282,30 @@ form button a {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+}
+
+.slider_click {
+    
+    margin: auto;
+}
+
+.click_container {
+
+    margin: auto;
+    width: 100%;
+}
+
+
+
+.click {
+
+    float: left;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 1px solid blue;
+    margin: auto;
+    margin: 5px;
 }
 
 
