--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 .container {
 
-    max-width: 80%;
+    max-width: 70%;
     margin: auto;
     
 }
@@ -174,7 +174,7 @@ form button a {
 
 .partners .partners_container img {
 
-    width: 140px;
+    width: 120px;
     height: 100px;
 
 }
@@ -315,6 +315,40 @@ form button a {
     padding-left: 5px;
 }
 
+.get_started {
+
+    width: 100%;
+}
+
+.get_started h2 a{
+
+    text-decoration: none;
+    color: blue;
+    border-radius: 20px;
+    padding: 10px 20px;
+}
+
+/* footer */
+
+footer li {
+
+    list-style: none;
+}
+
+footer li a {
+    text-decoration: none;
+    color: grey;
+    
+}
+
+footer .social_list li{
+
+    list-style: none;
+    display: inline-block;
+}
+
+
+
 
 
 
@@ -409,6 +443,27 @@ form button a {
     
     }
 
+    .future .row .col-4 {
+
+        width: 100%;
+    }
+
+    .row_test {
+
+        width: 100%;
+        padding: 20px 0;
+    }
+
+    footer .logo,footer .footer_list{
+
+        width: 100%;
+    }
+
+    .logo {
+
+        padding-left: 0;
+    }
+
 
     
 
@@ -458,7 +513,36 @@ form button a {
         height: 70px;
         
     }
+
+    .row_test {
+
+        width: 100%;
+        padding: 20px 0;
+    }
+
+    footer .logo {
+
+        width: 100%;
+    }
+
+    footer .footer_list {
+
+        width: 50%;
+
+
+    }
+
+
 }
+
+
+
+
+
+
+
+
+
 
 /* -----desktop version----- */
 
@@ -469,6 +553,8 @@ form button a {
         display: none;
     
     }
+
+    
 
 }
 
