--- a/framework.css
+++ b/framework.css
@@ -177,6 +177,13 @@
     display: table;
 }
 
+.clearfix_support {
+
+    content: "";
+    clear: both;
+    display: table;
+}
+
 .back-color-grey {
 
     background-color: #f3f5f9;
@@ -204,5 +211,18 @@ padding: 0 20px;
     
 }
 
+.roboto {
 
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.test_speed_color {
+
+    color: #00d5d1;
+}
+
+.test_speed_city {
+
+    color: #c7d1ed;
+} 
 
